--- a/bot/views/login.pug
+++ b/bot/views/login.pug
@@ -14,5 +14,6 @@ block content
             input.form-control(type='password' id='password' placeholder='password' name='password')
             input.form-control(type='hidden' name='channelId' value='channelId')
             input.form-control(type='hidden' name='userId' value='user')
+            input.form-control(type='hidden' name='addressId' value='address')
             button.btn.btn-primary(type='submit' id="submit") Log in 
             <script src=".bot/login.js"></script> 
