--- a/bot/views/change-password.pug
+++ b/bot/views/change-password.pug
@@ -7,8 +7,8 @@ block content
         h1.display-4.m-b-2 Change Password
         form(method='POST')
           div.form-group
-            label Username
-            label(id='userName')
+            label Username 
+            label= userId
           div.form-group
             label(for='New Password') New Password
             input.form-control(type='password' id='new_password' name='new_password')
