--- a/bot/views/index.pug
+++ b/bot/views/index.pug
@@ -1,5 +1,7 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  div.jumbotron.jumbotron-fluid
+    div.container
+      h1.display-3 #{title}
+      p Welcome to #{title}
