--- a/bot/views/login.pug
+++ b/bot/views/login.pug
@@ -4,19 +4,24 @@ block content
   .main.container
     .row
       .col-md-6.col-md-offset-3
-        h1.display-4.m-b-2 Log In
-        form.form-group(method='POST')
-          div.form-group
-            label(for='email') Username
-            input.form-control(type='text' id='username' placeholder='username' name='username' required)
-            div.invalid-feedback Username cannot be empty
-          div.form-group
-            label(for='password') Password
-            input.form-control(type='password' id='password' placeholder='password' name='password' required)
-            div.invalid-feedback Password cannot be empty
-          small.form-text.text-muted Your username & encrypted password will be saved in our database.
-          input.form-control(type='hidden' name='channelId' value='channelId')
-          input.form-control(type='hidden' name='userId' value='user')
-          input.form-control(type='hidden' name='addressId' value='address')
-          div.form-group
-            button.btn.btn-primary(type='submit' id="submit") Log in
+        script(src='login.js')
+        div.alert(role='alert' id="alert-msg") Logged in successfully using credentials
+        div(id="login-form-container")
+          h1.display-4.m-b-2 Log In
+          form.form-group.container(method='POST' id="login-form" novalidate)
+            div.form-group
+              label(for='email') Username
+              input.form-control(type='text' id='username' placeholder='username' name='username' required)
+              div.invalid-feedback Username cannot be empty
+            div.form-group
+              label(for='password') Password
+              input.form-control(type='password' id='password' placeholder='password' name='password' required)
+              div.invalid-feedback Password cannot be empty
+            small.form-text.text-muted Your username & encrypted password will be saved in our database.
+            input.form-control(type='hidden' name='channelId' value='channelId')
+            input.form-control(type='hidden' name='userId' value='user')
+            input.form-control(type='hidden' name='addressId' value='address')
+            div.form-group
+              button.btn.btn-primary(type='submit' id="submit") Log in
+
+
