Added support for change password Reusing login page

--- a/bot/views/login.pug
+++ b/bot/views/login.pug
@@ -7,7 +7,7 @@ block content
         script(src='login.js')
         div.alert(role='alert' id="alert-msg") Logged in successfully using credentials
         div(id="login-form-container")
-          h1.display-4.m-b-2 Log In
+          h1.display-4.m-b-2(id="page-title") Log In
           form.form-group.container(method='POST' id="login-form" novalidate)
             div.form-group
               label(for='email') Username
