Added fontawesome Added Spinner when user clicks on login.js

--- a/bot/views/login.pug
+++ b/bot/views/login.pug
@@ -22,6 +22,7 @@ block content
             input.form-control(type='hidden' name='userId' value='user')
             input.form-control(type='hidden' name='addressId' value='address')
             div.form-group
-              button.btn.btn-primary(type='submit' id="submit") Log in
+              button.btn.btn-primary(type='submit' id="submit") Log in 
+                span.fa.fa-spinner.fa-pulse(id="spinner" style="font-size:1.5em")
 
 
